# manual-backup-assistant

./: .gitignore  LICENSE  README.md  print_tree_from_json.py  pyproject.toml
.config/: labelled_dirs.example.json
